# NII-UI

./: CMakeLists.txt  build.sh  example.cpp  main.cpp
API/Includes/NII/: UI.hpp
API/Includes/NII/Graphics/Shapes/: RoundedShape.hpp
API/Includes/NII/UI/: Border.hpp  Button.hpp  Canvas.hpp  CheckBox.hpp  Grid.hpp  Image.hpp  List.hpp  Primitive.hpp  Scroll.hpp  Text.hpp  TextArea.hpp  Traits.hpp  Widget.hpp
API/Includes/NII/UI/Core/: ChildPrimitive.hpp  Primitive.hpp
API/Includes/NII/UI/Slots/: CanvasSlot.hpp  GridSlot.hpp
API/Includes/NII/Utility/: Agregates.hpp  AgregatesLiterals.hpp  Debug.hpp  Event.hpp
API/Sources/: CMakeLists.txt
API/Sources/UI/: Border.cpp  Canvas.cpp  Grid.cpp  Image.cpp  List.cpp  Primitive.cpp  Scroll.cpp  Text.cpp  Traits.cpp  Widget.cpp
API/Sources/UI/Core/: ChildPrimitive.cpp  Primitive.cpp
Resources/: .gitignore
